syntax = "proto3";

import "scalapb/scalapb.proto";

package freestyle.opscenter.protobuf;

message MetricProto {
    option (scalapb.message).extends = "freestyle.opscenter.model.Proto";
    string metric = 1;
    string microservice = 2;
    string node = 3;
    float value = 4;
    int64 date = 5;
}

message MetricProtoList {
    repeated MetricProto metricsList = 1 [(scalapb.field).collection_type="List"];
}